assets/CSS/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    scroll-padding-top: 200px;
}

:root {
    --lighttext: rgb(228, 255, 248);
    --dark: #3b3b4f;
    --lightbackground: #bfd3d6;
    --Kdam-Thmor-Pro: 'Kdam Thmor Pro', sans-serif; 
    --background-image: linear-gradient(#1515c2,#03012d);
}

body {
    height: 100%;
    background-color: #000025;
    color: var(--lighttext);
    display: flex;
    flex-direction: column;
    background-image: var(--background-image);
    font-family: var(--Kdam-Thmor-Pro);
}

header {
    display: flex;
    flex-wrap: wrap;
    position: fixed;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 50px;
    background-color: var(--dark);
    height: 200px;
    z-index: 2;  
    border-bottom: solid var(--lightbackground) 5px;
}

header h1 {
    color: var(--lighttext);
    padding: 20px;
    font-size: 42px;
}

nav a {
    color: var(--dark);
    padding: 20px;
    text-decoration: none;
    text-align: center;
    margin-left: 5px;
    margin-right: 5px;
    color: var(--lighttext);
}

main {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    flex-direction: column;
    color: var(--light);
}


.nav-anchor {
    height: 200px;
}

/*borrowed the grid-template-column idea from Scott Casey*/

.about-section {
    display: grid;
    grid-template-columns: repeat(2,1fr);
    gap: 25px;
    padding: 2%;
    color: var(--light);
    border-bottom: solid var(--lightbackground) 5px;
    text-align: start;   
}

.about-section > h2 {
    grid-row-start: 1;
}

.about-image-div {
    grid-row-start: 2;
    text-align: center;
}

.about-section > p {
    grid-row-start: 2;
}

.me-img {
    height: 300px;
   }
   
.project-section {
    display: grid;
    gap: 25px;
    padding: 2%;
    color: var(--light);
    border-bottom: solid var(--lightbackground) 5px;
    text-align: start;
}

.Horiseon-div {
    height: 300px;
    overflow: hidden;
    filter: brightness(50%);
    border-radius: 3px;
}

.Horiseon-div:hover {
    filter: brightness(100%);
    box-shadow: inset 0 0 3px rgb(102, 144, 236), 0 0 3px rgb(102, 144, 236);
  }


.horiseon {
    grid-column: 1;
    width: 100%;
    z-index: 1;
} 

.horiseon img {
    width: 100%;
}


.cards {
    display: grid;
     grid-template-columns: repeat(2,1fr);
     gap: 15px;
}

.cards > section:first-of-type {
    grid-column: span 2;
}
  
.small-project {
    width: 100%;
    height: 200px;
    overflow: hidden;
    filter: brightness(50%);
}

.small-project:hover {
    filter: brightness(100%);
    box-shadow: inset 0px 0px 10px rgb(102, 144, 236), 0 0 10px rgb(102, 144, 236);
  }

.small-project > img {
  object-fit: cover;
  width: 100%;
  max-height: 100%;
}

#Contact{
    align-items: center;
    justify-content: space-between;
    background-color: var(--dark);
    color: var(--lighttext);
    display: flex;
    margin: 1em;
    border: solid 1px black;  
    padding: 2%;
    margin-bottom: 15px;
    position: sticky;
}

#contact h3 {
    padding-left: 15px;
}

#contact-info {
    padding-left: 15px;
    padding-right: 15px;
}

